--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
   - env:
       - CGO_ENABLED=0
     # binary: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
-    no_unique_dist_dir: true
+    no_unique_dist_dir: false
     targets:
       - linux_amd64
       - windows_amd64
